23. jpa 양방향 관계 어노테이션 수정 & Reply 엔티티 추가 - mappedBy, @JoinColumn - PostReply, PostReplyRepository - 테스트 코드